# mk-template

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  TXML.md  copy_schema_to_server.sh  execute_tests.sh  install.sh  installer.bat  installer.sh  rustfmt.toml
crates/bin_app/: Cargo.toml
crates/bin_app/src/: commands.rs  config.rs  main.rs  templates.rs
crates/bin_app/src/commands/: add.rs  help.rs  list.rs  remove.rs  spawn.rs  version.rs
crates/bin_app/src/templates/: data.rs  dir.rs  git.rs  txml.rs
crates/txml_processor/: Cargo.toml  template_example.xml  txml_schema.xsd
crates/txml_processor/src/: commands.rs  fs_elements.rs  lib.rs  objects.rs  reader.rs  txml_elements.rs  txml_structure.rs
default-templates/: txml.xml
tests/: test_dir_template.sh  test_git_template.sh  test_txml_template.sh
tests/resources/: template_example_0.xml  template_example_1.xml  template_example_2.xml  template_example_3.xml  template_example_4.xml  template_example_5.xml  utils.sh
